Fixed issue of footer navigation bar overlapping page content

--- a/ArtistBook/app/assets/stylesheets/application.scss
+++ b/ArtistBook/app/assets/stylesheets/application.scss
@@ -26,6 +26,16 @@ body {
   background-size: 100% !important;
 }
 
+.wrap {
+    width: 610px;
+    height: 100px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    clear: both;
+    padding-top: 20px;
+
+}
+
 .navbar {
   height: 8% !important;
   font-size: 2em;
